# src/modules/accounts/infra/http/controllers/UpdateProfileController.ts
@@ -1,0 +1,20 @@
+import { Request, Response } from "express";
+import { UpdateProfileUseCase } from "../../../useCases/updateProfile/UpdateProfileUseCase";
+
+export class UpdateProfileController {
+  async handle(request: Request, response: Response) {
+    const { userId } = request;
+    const { name, oldPassword, password } = request.body;
+
+    const updateProfileUseCase = new UpdateProfileUseCase();
+
+    const account = await updateProfileUseCase.execute({
+      id: userId,
+      name,
+      oldPassword,
+      password,
+    });
+
+    return response.json(account);
+  }
+}
